--- a/stitcher/test/bats/CMakeLists.txt
+++ b/stitcher/test/bats/CMakeLists.txt
@@ -8,6 +8,6 @@ add_test (
 
 add_test (
     NAME test_airmap_stitcher_failures
-    COMMAND ../bats/bin/bats ${CMAKE_CURRENT_SOURCE_DIR}/airmap_stitcher_failures.test.bats
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/..
+    COMMAND ./bats/bin/bats ${CMAKE_CURRENT_SOURCE_DIR}/airmap_stitcher_failures.test.bats
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../..
 )
