Replace custom path with boost::filesystem::path

--- a/stitcher/test/gtest/CMakeLists.txt
+++ b/stitcher/test/gtest/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(imagesTests test/gtest/images.cpp)
 
 target_link_libraries(cameraTests gtest gtest_main airmap_stitching)
 target_link_libraries(gimbalTests gtest gtest_main airmap_stitching)
-target_link_libraries(imagesTests gtest gtest_main airmap_stitching)
+target_link_libraries(imagesTests gtest gtest_main airmap_stitching Boost::filesystem)
 
 add_test(cameraTests cameraTests)
 add_test(gimbalTests gimbalTests)
