Detect upside down panoramas and rotate.

--- a/stitcher/CMakeLists.txt
+++ b/stitcher/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(
     src/monitor/estimator.cpp
     src/monitor/monitor.cpp
     src/monitor/timer.cpp
+    src/opencv/matchers.cpp
     src/opencv/seam_finders.cpp
     src/panorama.cpp
     src/stitcher.cpp
