add coverage script

--- a/stitcher/CMakeLists.txt
+++ b/stitcher/CMakeLists.txt
@@ -2,6 +2,16 @@ cmake_minimum_required(VERSION 3.6)
 
 project("airmap-panorama-stitcher")
 
+string(COMPARE EQUAL "${CMAKE_BUILD_TYPE}" "Coverage" IS_COVERAGE_BUILD)
+if (IS_COVERAGE_BUILD)
+    message(STATUS "Enabling coverage build")
+    set(CMAKE_BUILD_TYPE 'Debug')
+    #
+    # Assumes GCOV-compatible compiler such as GCC or Clang.
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
+endif()
+
 find_package(OpenCV 4.2 REQUIRED)
 
 # Boost is a development dependency and this binary has very
